# careobot_tuberlin

./: .project  .pydevproject  CMakeLists.txt  README.md  package.xml
UserManual/: Robocop.pptx  system_design_specifications-COB3_RC04.docx
launch/: launch_moveit.launch  myrobot_launch.launch~  myrobot_launch_sim.launch
src/: move_arm.py  move_arm.py~  mygrasps_node.py  start_node.py  test_script.py
